# DHBW_RezeptApp

./: .gitignore  README.md
.github/workflows/: main.yml
api/: .env  Cargo.toml
api/src/: db_handler.rs  main.rs
api/src/db_handler/: recipes.rs  users.rs
api/src/db_handler/recipes/: routes.rs
api/src/db_handler/users/: routes.rs
docs/: API_Endpoints.md  Berichte.docx  CICD Setup Überblick.docx  QualityTree.md  Retrospektive.docx  Risikomanagementtabelle.xlsx  SoftwareArchitectureDocument.docx  SoftwareArchitectureDocument.md  SoftwareRequierements.md  SoftwareRequirementsSpecification.md
next/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
next/__test__/: login.test.js  previews.test.js  recipe.test.js  register.test.js
next/src/app/: globals.css  layout.js  loading.js  page.js  page.tsx
next/src/app/create/: page.tsx
next/src/app/login/: page.tsx
next/src/app/profile/: page.js  page.tsx
next/src/app/profile/create_recipe/: page.js  page.tsx
next/src/app/profile/favorites/: page.tsx
next/src/app/profile/login/: page.tsx
next/src/app/profile/options/: page.tsx
next/src/app/profile/own_recipe/: page.tsx
next/src/app/profile/register/: page.tsx
next/src/app/recipe/: page.tsx
next/src/app/test/: page.tsx
next/src/components/: Alert.tsx  DeleteAccount.jsx  Editor.jsx  Ingredient.jsx  Ingredients.jsx  Logo.tsx  Navbar.jsx  Preview.jsx  Recipe-Provider-old.jsx  Recipe-Provider.jsx  Recipe.jsx  RecipeIngredients.jsx  RecipePreview.jsx  RecipeSteps.jsx  Search.jsx  Sign.jsx  Test.jsx
(+1 files in other folders)
