[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenvy = "0.15.7"
serde = "1.0.189"
sqlx = {version = "0.7.2", features = ["mysql", "runtime-tokio"]}
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
